--- a/LoveSourceCode/表白颖宝/index.html
+++ b/LoveSourceCode/表白颖宝/index.html
@@ -23,13 +23,13 @@
             </audio>
             <div id="wrap">
                 <div id="text">
-                    <div id="code"> <font color="#FF0000"> <span class="say">亲爱的宝宝，我爱你</span><br>
+                    <div id="code"> <font color="#FF0000"> <span class="say">亲爱的颖宝，我爱你</span><br>
                       <span class="say"> 我知道我不会甜言蜜语，</span><br>
                       <span class="say"> 但是我会用行动证明一切</span><br>
-                      <span class="say">你说我啰嗦，</span><br>             
+                      <span class="say">你说我老说废话，</span><br>             
                           <span class="say"> 有些东西因为越在乎所以越怕失去</span><br>
                       <span class="say">因为我太爱你了，所以我害怕失去你</span><br>
-                      <span class="say">因为我太爱你了，所以我对你总啰嗦</span><br>
+                      <span class="say">因为我太爱你了，所以我总是用废话找你</span><br>
                       <span class="say">希望可以执子之手，与子偕老</span><br>
                       <span class="say">如果上天让我许三个愿望，</span><br>
                               <span class="say">第一个是今生今世和你在一起， </span><br>
@@ -182,9 +182,9 @@
 
         var textAnimate = eval(Jscex.compile("async", function () {
 		    var together = new Date();
-		    together.setFullYear(2010,1 , 15); 			//时间年月日
-		    together.setHours(16);						//小时	
-		    together.setMinutes(53);					//分钟
+		    together.setFullYear(2022,9 , 20); 			//时间年月日
+		    together.setHours(11);						//小时	
+		    together.setMinutes(30);					//分钟
 		    together.setSeconds(0);					//秒前一位
 		    together.setMilliseconds(2);				//秒第二位
 
